When downloading the archive, use the character name as the filename

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             archive_character_base64(document.getElementById("name").value, document.getElementById("scales").checked).then((uri) => {
                 // Download character archive
                 window.location.replace(uri);
+                var link = document.createElement('a');
+                link.download = document.getElementById("name").value + ".zip";
+                link.href = uri;
+                link.click();
                 document.getElementById("statusMessage").innerText = "Archive complete!";
             }).catch((err) => {
                 document.getElementById("statusMessage").innerText = err;
